microk8s/k8s/ingress/grpc-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-client-ingress
  namespace: quarkus-apero-code
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /grpc-client-k8s(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grpc-client-k8s
                port:
                  number: 4000
