microk8s/k8s/ingress/k8s-quickstart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-quickstart-ingress
  namespace: quarkus-apero-code
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /k8s-quickstart(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kubernetes-quickstart
                port:
                  number: 2000
